Day 50/100 commits - Add variables and env to database and test end to end
