# internal/routers/api/dtos/env_dto.go
@@ -1,0 +1,12 @@
+package dtos
+
+type AddEnvDto struct {
+	Name     string `json:"name"`
+	Value    string `json:"value"`
+	IsSecret bool   `json:"isSecret"`
+}
+
+type AddVariableDto struct {
+	Name  string `json:"name"`
+	Value string `json:"value"`
+}
