# internal/routers/api/iac_controller.go
@@ -1,8 +1,10 @@
 package api
 
 import (
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
+	"github.com/opentracing/opentracing-go/log"
 	"labraboard/internal/routers/api/dtos"
 	"labraboard/internal/services"
 	vo "labraboard/internal/valueobjects"
@@ -30,6 +32,7 @@ func (iac *IacController) GetProjects(context *gin.Context) {
 	projects, err := iac.iac.GetProjects()
 
 	if err != nil {
+		log.Error(err)
 		context.JSON(http.StatusServiceUnavailable, gin.H{"message": "cannot retrieve projects"})
 		return
 	}
@@ -61,6 +64,7 @@ func (iac *IacController) GetProject(context *gin.Context) {
 	project, err := iac.iac.GetProject(uuid.MustParse(projectId))
 
 	if err != nil {
+		log.Error(err)
 		context.JSON(http.StatusServiceUnavailable, gin.H{"message": "cannot retrieve project"})
 		return
 	}
@@ -73,6 +77,8 @@ func (iac *IacController) GetProject(context *gin.Context) {
 		RepositoryUrl:     project.Repo.Url,
 		RepositoryBranch:  project.Repo.DefaultBranch,
 		TerraformPath:     project.Repo.Path,
+		Envs:              project.GetEnvs(true),
+		Variables:         project.GetVariableMap(),
 	}
 	context.JSON(http.StatusOK, dto)
 }
@@ -102,8 +108,111 @@ func (iac *IacController) CreateProject(context *gin.Context) {
 	id, err := iac.iac.CreateProject(vo.IaCType(dto.IacType), repo)
 
 	if err != nil {
+		log.Error(err)
 		context.JSON(http.StatusServiceUnavailable, gin.H{"message": "cannot retrieve project"})
 		return
 	}
 	context.JSON(http.StatusOK, id)
+}
+
+// AddEnv Add an env to a project
+// @Summary Add new env to a project
+// @Schemes
+// @Description Add new env to a project
+// @Tags project
+// @Param projectId path string true "project id"
+// @Param project body dtos.AddEnvDto true "Env to add"
+// @Accept json
+// @Produce json
+// @Success 200 {string} interface{}
+// @Router /project/{projectId}/env [PUT]
+func (iac *IacController) AddEnv(context *gin.Context) {
+	projectId := context.Param("projectId")
+	var dto dtos.AddEnvDto
+	if err := context.BindJSON(&dto); err != nil {
+		log.Error(err)
+		context.JSON(http.StatusBadRequest, gin.H{"message": "invalid payload"})
+		return
+	}
+	err := iac.iac.AddEnv(uuid.MustParse(projectId), dto.Name, dto.Value, dto.IsSecret)
+	if err != nil {
+		log.Error(err)
+		context.JSON(http.StatusServiceUnavailable, gin.H{"message": fmt.Sprintf("cannot add env %s", dto.Name)})
+		return
+
+	}
+	context.JSON(http.StatusOK, gin.H{"message": fmt.Sprintf("env %s added", dto.Name)})
+}
+
+// RemoveEnv Remove an env to a project
+// @Summary Remove new env to a project
+// @Schemes
+// @Description Remove new env to a project
+// @Tags project
+// @Param projectId path string true "project id"
+// @Param envName path string true "env name"
+// @Accept json
+// @Produce json
+// @Success 200 {string} interface{}
+// @Router /project/{projectId}/env/{envName} [DELETE]
+func (iac *IacController) RemoveEnv(context *gin.Context) {
+	projectId := context.Param("projectId")
+	envName := context.Param("envName")
+	if err := iac.iac.RemoveEnv(uuid.MustParse(projectId), envName); err != nil {
+		log.Error(err)
+		context.JSON(http.StatusServiceUnavailable, gin.H{"message": fmt.Sprintf("cannot remove env %s", envName)})
+		return
+	}
+	context.JSON(http.StatusOK, gin.H{"message": fmt.Sprintf("env %s removed", envName)})
+}
+
+// AddVariable Add a variable to a project
+// @Summary Add new variable to a project
+// @Schemes
+// @Description Add new variable to a project
+// @Tags project
+// @Param projectId path string true "project id"
+// @Param project body dtos.AddVariableDto true "Env to add"
+// @Accept json
+// @Produce json
+// @Success 200 {string} interface{}
+// @Router /project/{projectId}/variable [PUT]
+func (iac *IacController) AddVariable(context *gin.Context) {
+	projectId := context.Param("projectId")
+	var dto dtos.AddVariableDto
+	if err := context.BindJSON(&dto); err != nil {
+		log.Error(err)
+		context.JSON(http.StatusBadRequest, gin.H{"message": "invalid payload"})
+		return
+	}
+	err := iac.iac.AddVariable(uuid.MustParse(projectId), dto.Name, dto.Value)
+	if err != nil {
+		log.Error(err)
+		context.JSON(http.StatusServiceUnavailable, gin.H{"message": fmt.Sprintf("cannot add variable %s", dto.Name)})
+		return
+
+	}
+	context.JSON(http.StatusOK, gin.H{"message": fmt.Sprintf("variable %s added", dto.Name)})
+}
+
+// RemoveVariable Remove a variable to a project
+// @Summary Remove new variable to a project
+// @Schemes
+// @Description Remove new variable to a project
+// @Tags project
+// @Param projectId path string true "project id"
+// @Param variableName path string true "variable name"
+// @Accept json
+// @Produce json
+// @Success 200 {string} interface{}
+// @Router /project/{projectId}/variable/{variableName} [DELETE]
+func (iac *IacController) RemoveVariable(context *gin.Context) {
+	projectId := context.Param("projectId")
+	variableName := context.Param("variableName")
+	if err := iac.iac.RemoveVariable(uuid.MustParse(projectId), variableName); err != nil {
+		log.Error(err)
+		context.JSON(http.StatusServiceUnavailable, gin.H{"message": fmt.Sprintf("cannot remove variable %s", variableName)})
+		return
+	}
+	context.JSON(http.StatusOK, gin.H{"message": fmt.Sprintf("variable %s removed", variableName)})
 }
